Apply SET_BIN_DIR macro to Mod

--- a/src/Mod/Assembly/App/CMakeLists.txt
+++ b/src/Mod/Assembly/App/CMakeLists.txt
@@ -30,20 +30,9 @@ fc_target_copy_resource(Assembly
     ${CMAKE_BINARY_DIR}/Mod/Assembly
     Init.py)
 
-if(MSVC)
+SET_BIN_DIR(Assembly "Assembly" "/Mod/Assembly")
+if(WIN32)
     set_target_properties(Assembly PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Assembly PROPERTIES DEBUG_OUTPUT_NAME "Assembly_d")
-    set_target_properties(Assembly PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Assembly)
-    set_target_properties(Assembly PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(Assembly PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Assembly PROPERTIES DEBUG_OUTPUT_NAME "Assembly_d")
-    set_target_properties(Assembly PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Assembly)
-    set_target_properties(Assembly PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(Assembly PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Assembly)
-    set_target_properties(Assembly PROPERTIES PREFIX "")
-    SET_TARGET_PROPERTIES(Assembly PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-endif(MSVC)
+endif(WIN32)
 
 INSTALL(TARGETS Assembly DESTINATION lib)
