--- a/src/Mod/Assembly/Gui/CMakeLists.txt
+++ b/src/Mod/Assembly/Gui/CMakeLists.txt
@@ -40,20 +40,9 @@ fc_target_copy_resource(AssemblyGui
     ${CMAKE_BINARY_DIR}/Mod/Assembly
     InitGui.py)
 
-if(MSVC)
+SET_BIN_DIR(AssemblyGui "AssemblyGui" "/Mod/Assembly")
+if(WIN32)
     set_target_properties(AssemblyGui PROPERTIES SUFFIX ".pyd")
-    set_target_properties(AssemblyGui PROPERTIES DEBUG_OUTPUT_NAME "AssemblyGui_d")
-    set_target_properties(AssemblyGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Assembly)
-    set_target_properties(AssemblyGui PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(AssemblyGui PROPERTIES SUFFIX ".pyd")
-    set_target_properties(AssemblyGui PROPERTIES DEBUG_OUTPUT_NAME "AssemblyGui_d")
-    set_target_properties(AssemblyGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Assembly)
-    set_target_properties(AssemblyGui PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(AssemblyGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Assembly)
-    set_target_properties(AssemblyGui PROPERTIES PREFIX "")
-    SET_TARGET_PROPERTIES(AssemblyGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-endif(MSVC)
+endif(WIN32)
 
 INSTALL(TARGETS AssemblyGui DESTINATION lib)
