--- a/src/Mod/Drawing/App/CMakeLists.txt
+++ b/src/Mod/Drawing/App/CMakeLists.txt
@@ -85,23 +85,15 @@ fc_target_copy_resource(Drawing
     ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_DATADIR}/Mod/Drawing
     ${Drawing_Templates})
 
-if(MSVC)
+SET_BIN_DIR(Drawing "Drawing" "/Mod/Drawing")
+if(WIN32)
     set_target_properties(Drawing PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Drawing PROPERTIES DEBUG_OUTPUT_NAME "Drawing_d")
-    set_target_properties(Drawing PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Drawing)
-    set_target_properties(Drawing PROPERTIES PREFIX "../")
+endif(WIN32)
+
+if(MSVC)
     # Set special compiler flag to convert a SIGSEV into an exception
     # to fix issue #0000478
     set_target_properties(Drawing PROPERTIES COMPILE_FLAGS "/EHa")
-elseif(MINGW)
-    set_target_properties(Drawing PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Drawing PROPERTIES DEBUG_OUTPUT_NAME "Drawing_d")
-    set_target_properties(Drawing PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Drawing)
-    set_target_properties(Drawing PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(Drawing PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Drawing)
-    set_target_properties(Drawing PROPERTIES PREFIX "")
-    set_target_properties(Drawing PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
 INSTALL(TARGETS Drawing DESTINATION lib)
