--- a/src/Mod/Image/Gui/CMakeLists.txt
+++ b/src/Mod/Image/Gui/CMakeLists.txt
@@ -69,20 +69,9 @@ fc_target_copy_resource(ImageGui
     ${CMAKE_BINARY_DIR}/Mod/Image
     InitGui.py)
 
-if(MSVC)
+SET_BIN_DIR(ImageGui "ImageGui" "/Mod/Image")
+if(WIN32)
     set_target_properties(ImageGui PROPERTIES SUFFIX ".pyd")
-    set_target_properties(ImageGui PROPERTIES DEBUG_OUTPUT_NAME "ImageGui_d")
-    set_target_properties(ImageGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Image)
-    set_target_properties(ImageGui PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(ImageGui PROPERTIES SUFFIX ".pyd")
-    set_target_properties(ImageGui PROPERTIES DEBUG_OUTPUT_NAME "ImageGui_d")
-    set_target_properties(ImageGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Image)
-    set_target_properties(ImageGui PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(ImageGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Image)
-    set_target_properties(ImageGui PROPERTIES PREFIX "")
-    set_target_properties(ImageGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-endif(MSVC)
+endif(WIN32)
 
 INSTALL(TARGETS ImageGui DESTINATION lib)
