--- a/src/Mod/Import/Gui/CMakeLists.txt
+++ b/src/Mod/Import/Gui/CMakeLists.txt
@@ -46,22 +46,14 @@ fc_target_copy_resource(ImportGui
     ${CMAKE_BINARY_DIR}/Mod/Import
     Init.py InitGui.py)
 
-if(MSVC)
+SET_BIN_DIR(ImportGui "ImportGui" "/Mod/Import")
+if(WIN32)
     set_target_properties(ImportGui PROPERTIES SUFFIX ".pyd")
-    set_target_properties(ImportGui PROPERTIES DEBUG_OUTPUT_NAME "ImportGui_d")
-    set_target_properties(ImportGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Import)
-    set_target_properties(ImportGui PROPERTIES PREFIX "../")
+endif(WIN32)
+
+if(MSVC)
     # Set special compiler flag to convert a SIGSEV into an exception
     set_target_properties(ImportGui PROPERTIES COMPILE_FLAGS "/EHa")
-elseif(MINGW)
-    set_target_properties(ImportGui PROPERTIES SUFFIX ".pyd")
-    set_target_properties(ImportGui PROPERTIES DEBUG_OUTPUT_NAME "ImportGui_d")
-    set_target_properties(ImportGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Import)
-    set_target_properties(ImportGui PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(ImportGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Import)
-    set_target_properties(ImportGui PROPERTIES PREFIX "")
-    set_target_properties(ImportGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
 INSTALL(TARGETS ImportGui DESTINATION lib)
