--- a/src/Mod/Inspection/App/CMakeLists.txt
+++ b/src/Mod/Inspection/App/CMakeLists.txt
@@ -42,20 +42,9 @@ fc_target_copy_resource(Inspection
     ${CMAKE_BINARY_DIR}/Mod/Inspection
     Init.py)
 
-if(MSVC)
+SET_BIN_DIR(Inspection "Inspection" "/Mod/Inspection")
+if(WIN32)
     set_target_properties(Inspection PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Inspection PROPERTIES DEBUG_OUTPUT_NAME "Inspection_d")
-    set_target_properties(Inspection PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Inspection)
-    set_target_properties(Inspection PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(Inspection PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Inspection PROPERTIES DEBUG_OUTPUT_NAME "Inspection_d")
-    set_target_properties(Inspection PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Inspection)
-    set_target_properties(Inspection PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(Inspection PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Inspection)
-    set_target_properties(Inspection PROPERTIES PREFIX "")
-    set_target_properties(Inspection PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-endif(MSVC)
+endif(WIN32)
 
 INSTALL(TARGETS Inspection DESTINATION lib)
