--- a/src/Mod/Mesh/Gui/CMakeLists.txt
+++ b/src/Mod/Mesh/Gui/CMakeLists.txt
@@ -129,20 +129,9 @@ fc_target_copy_resource(MeshGui
     ${CMAKE_BINARY_DIR}/Mod/Mesh
     InitGui.py)
 
-if(MSVC)
+SET_BIN_DIR(MeshGui "MeshGui" "/Mod/Mesh")
+if(WIN32)
     set_target_properties(MeshGui PROPERTIES SUFFIX ".pyd")
-    set_target_properties(MeshGui PROPERTIES DEBUG_OUTPUT_NAME "MeshGui_d")
-    set_target_properties(MeshGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Mesh)
-    set_target_properties(MeshGui PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(MeshGui PROPERTIES SUFFIX ".pyd")
-    set_target_properties(MeshGui PROPERTIES DEBUG_OUTPUT_NAME "MeshGui_d")
-    set_target_properties(MeshGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Mesh)
-    set_target_properties(MeshGui PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(MeshGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Mesh)
-    set_target_properties(MeshGui PROPERTIES PREFIX "")
-    set_target_properties(MeshGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-endif(MSVC)
+endif(WIN32)
 
 INSTALL(TARGETS MeshGui DESTINATION lib)
