--- a/src/Mod/MeshPart/Gui/CMakeLists.txt
+++ b/src/Mod/MeshPart/Gui/CMakeLists.txt
@@ -69,20 +69,9 @@ fc_target_copy_resource(MeshPartGui
     ${CMAKE_BINARY_DIR}/Mod/MeshPart
     InitGui.py)
 
-if(MSVC)
+SET_BIN_DIR(MeshPartGui "MeshPartGui" "/Mod/MeshPart")
+if(WIN32)
     set_target_properties(MeshPartGui PROPERTIES SUFFIX ".pyd")
-    set_target_properties(MeshPartGui PROPERTIES DEBUG_OUTPUT_NAME "MeshPartGui_d")
-    set_target_properties(MeshPartGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/MeshPart)
-    set_target_properties(MeshPartGui PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(MeshPartGui PROPERTIES SUFFIX ".pyd")
-    set_target_properties(MeshPartGui PROPERTIES DEBUG_OUTPUT_NAME "MeshPartGui_d")
-    set_target_properties(MeshPartGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/MeshPart)
-    set_target_properties(MeshPartGui PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(MeshPartGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/MeshPart)
-    set_target_properties(MeshPartGui PROPERTIES PREFIX "")
-    set_target_properties(MeshPartGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-endif(MSVC)
+endif(WIN32)
 
 INSTALL(TARGETS MeshPartGui DESTINATION lib)
