--- a/src/Mod/Part/App/CMakeLists.txt
+++ b/src/Mod/Part/App/CMakeLists.txt
@@ -262,23 +262,15 @@ fc_target_copy_resource(Part
     ${CMAKE_BINARY_DIR}/Mod/Part
     ${Part_Scripts})
 
-if(MSVC)
+SET_BIN_DIR(Part "Part" "/Mod/Part")
+if(WIN32)
     set_target_properties(Part PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Part PROPERTIES DEBUG_OUTPUT_NAME "Part_d")
-    set_target_properties(Part PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Part)
-    set_target_properties(Part PROPERTIES PREFIX "../")
+endif(WIN32)
+
+if(MSVC)
     # Set special compiler flag to convert a SIGSEV into an exception
     # to fix issue #0000215, #0001155, ...
     set_target_properties(Part PROPERTIES COMPILE_FLAGS "/EHa")
-elseif(MINGW)
-    set_target_properties(Part PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Part PROPERTIES DEBUG_OUTPUT_NAME "Part_d")
-    set_target_properties(Part PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Part)
-    set_target_properties(Part PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(Part PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Part)
-    set_target_properties(Part PROPERTIES PREFIX "")
-    set_target_properties(Part PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
 INSTALL(TARGETS Part DESTINATION lib)
