--- a/src/Mod/Points/Gui/CMakeLists.txt
+++ b/src/Mod/Points/Gui/CMakeLists.txt
@@ -61,20 +61,9 @@ fc_target_copy_resource(PointsGui
     ${CMAKE_BINARY_DIR}/Mod/Points
     InitGui.py)
 
-if(MSVC)
+SET_BIN_DIR(PointsGui "PointsGui" "/Mod/Points")
+if(WIN32)
     set_target_properties(PointsGui PROPERTIES SUFFIX ".pyd")
-    set_target_properties(PointsGui PROPERTIES DEBUG_OUTPUT_NAME "PointsGui_d")
-    set_target_properties(PointsGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Points)
-    set_target_properties(PointsGui PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(PointsGui PROPERTIES SUFFIX ".pyd")
-    set_target_properties(PointsGui PROPERTIES DEBUG_OUTPUT_NAME "PointsGui_d")
-    set_target_properties(PointsGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Points)
-    set_target_properties(PointsGui PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(PointsGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Points)
-    set_target_properties(PointsGui PROPERTIES PREFIX "")
-    set_target_properties(PointsGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-endif(MSVC)
+endif(WIN32)
 
 INSTALL(TARGETS PointsGui DESTINATION lib)
