--- a/src/Mod/Robot/App/CMakeLists.txt
+++ b/src/Mod/Robot/App/CMakeLists.txt
@@ -138,21 +138,9 @@ fc_target_copy_resource(Robot
     ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_DATADIR}/Mod/Robot
     ${Robot_Resources})
 
-
-if(MSVC)
+SET_BIN_DIR(Robot "Robot" "/Mod/Robot")
+if(WIN32)
     set_target_properties(Robot PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Robot PROPERTIES DEBUG_OUTPUT_NAME "Robot_d")
-    set_target_properties(Robot PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Robot)
-    set_target_properties(Robot PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(Robot PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Robot PROPERTIES DEBUG_OUTPUT_NAME "Robot_d")
-    set_target_properties(Robot PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Robot)
-    set_target_properties(Robot PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(Robot PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Robot)
-    set_target_properties(Robot PROPERTIES PREFIX "")
-    set_target_properties(Robot PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-endif(MSVC)
+endif(WIN32)
 
 INSTALL(TARGETS Robot DESTINATION lib)
