--- a/src/Mod/Test/Gui/CMakeLists.txt
+++ b/src/Mod/Test/Gui/CMakeLists.txt
@@ -55,21 +55,10 @@ add_dependencies(QtUnitGui Test)
 
 fc_copy_sources(QtUnitGui "${CMAKE_BINARY_DIR}/Mod/Test" qtunittest.py)
 
-if(MSVC)
+SET_BIN_DIR(QtUnitGui "QtUnitGui" "/Mod/Test")
+if(WIN32)
     set_target_properties(QtUnitGui PROPERTIES SUFFIX ".pyd")
-    set_target_properties(QtUnitGui PROPERTIES DEBUG_OUTPUT_NAME "QtUnitGui_d")
-    set_target_properties(QtUnitGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Test)
-    set_target_properties(QtUnitGui PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(QtUnitGui PROPERTIES SUFFIX ".pyd")
-    set_target_properties(QtUnitGui PROPERTIES DEBUG_OUTPUT_NAME "QtUnitGui_d")
-    set_target_properties(QtUnitGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Test)
-    set_target_properties(QtUnitGui PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(QtUnitGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Test)
-    set_target_properties(QtUnitGui PROPERTIES PREFIX "")
-    set_target_properties(QtUnitGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-endif(MSVC)
+endif(WIN32)
 
 INSTALL(TARGETS QtUnitGui DESTINATION lib)
 INSTALL(FILES ${TestGuiPy_SRCS} DESTINATION Mod/Test)
