--- a/src/Mod/Complete/App/CMakeLists.txt
+++ b/src/Mod/Complete/App/CMakeLists.txt
@@ -30,20 +30,9 @@ fc_target_copy_resource(Complete
     ${CMAKE_BINARY_DIR}/Mod/Complete
     Init.py)
 
-if(MSVC)
+SET_BIN_DIR(Complete "Complete" "/Mod/Complete")
+if(WIN32)
     set_target_properties(Complete PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Complete PROPERTIES DEBUG_OUTPUT_NAME "Complete_d")
-    set_target_properties(Complete PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Complete)
-    set_target_properties(Complete PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(Complete PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Complete PROPERTIES DEBUG_OUTPUT_NAME "Complete_d")
-    set_target_properties(Complete PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Complete)
-    set_target_properties(Complete PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(Complete PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Complete)
-    set_target_properties(Complete PROPERTIES PREFIX "")
-    set_target_properties(Complete PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-endif(MSVC)
+endif(WIN32)
 
 INSTALL(TARGETS Complete DESTINATION lib)
