--- a/src/Mod/Import/App/CMakeLists.txt
+++ b/src/Mod/Import/App/CMakeLists.txt
@@ -69,23 +69,14 @@ fc_target_copy_resource(ImportPy
     ${CMAKE_BINARY_DIR}/Mod/Import
     ${SCL_Resources})
 
+SET_BIN_DIR(Import "Import" "/Mod/Import")
+if(WIN32)
+    set_target_properties(Import PROPERTIES SUFFIX ".pyd")
+endif(WIN32)
 
 if(MSVC)
-    set_target_properties(Import PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Import PROPERTIES DEBUG_OUTPUT_NAME "Import_d")
-    set_target_properties(Import PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Import)
-    set_target_properties(Import PROPERTIES PREFIX "../")
     # Set special compiler flag to convert a SIGSEV into an exception
     set_target_properties(Import PROPERTIES COMPILE_FLAGS "/EHa")
-elseif(MINGW)
-    set_target_properties(Import PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Import PROPERTIES DEBUG_OUTPUT_NAME "Import_d")
-    set_target_properties(Import PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Import)
-    set_target_properties(Import PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(Import PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Import)
-    set_target_properties(Import PROPERTIES PREFIX "")
-    set_target_properties(Import PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
 INSTALL(TARGETS Import DESTINATION lib)
