--- a/src/Mod/MeshPart/App/CMakeLists.txt
+++ b/src/Mod/MeshPart/App/CMakeLists.txt
@@ -67,20 +67,9 @@ fc_target_copy_resource(MeshPart
     ${CMAKE_BINARY_DIR}/Mod/MeshPart
     Init.py)
 
-if(MSVC)
+SET_BIN_DIR(MeshPart "MeshPart" "/Mod/MeshPart")
+if(WIN32)
     set_target_properties(MeshPart PROPERTIES SUFFIX ".pyd")
-    set_target_properties(MeshPart PROPERTIES DEBUG_OUTPUT_NAME "MeshPart_d")
-    set_target_properties(MeshPart PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/MeshPart)
-    set_target_properties(MeshPart PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(MeshPart PROPERTIES SUFFIX ".pyd")
-    set_target_properties(MeshPart PROPERTIES DEBUG_OUTPUT_NAME "MeshPart_d")
-    set_target_properties(MeshPart PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/MeshPart)
-    set_target_properties(MeshPart PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(MeshPart PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/MeshPart)
-    set_target_properties(MeshPart PROPERTIES PREFIX "")
-    set_target_properties(MeshPart PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-endif(MSVC)
+endif(WIN32)
 
 INSTALL(TARGETS MeshPart DESTINATION lib)
