--- a/src/Mod/Sandbox/App/CMakeLists.txt
+++ b/src/Mod/Sandbox/App/CMakeLists.txt
@@ -38,20 +38,9 @@ fc_target_copy_resource(Sandbox
     ${CMAKE_BINARY_DIR}/Mod/Sandbox
     Init.py)
 
-if(MSVC)
+SET_BIN_DIR(Sandbox "Sandbox" "/Mod/Sandbox")
+if(WIN32)
     set_target_properties(Sandbox PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Sandbox PROPERTIES DEBUG_OUTPUT_NAME "Sandbox_d")
-    set_target_properties(Sandbox PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Sandbox)
-    set_target_properties(Sandbox PROPERTIES PREFIX "../")
-elseif(MINGW)
-    set_target_properties(Sandbox PROPERTIES SUFFIX ".pyd")
-    set_target_properties(Sandbox PROPERTIES DEBUG_OUTPUT_NAME "Sandbox_d")
-    set_target_properties(Sandbox PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Sandbox)
-    set_target_properties(Sandbox PROPERTIES PREFIX "")
-else(MSVC)
-    set_target_properties(Sandbox PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Sandbox)
-    set_target_properties(Sandbox PROPERTIES PREFIX "")
-    set_target_properties(Sandbox PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
-endif(MSVC)
+endif(WIN32)
 
 INSTALL(TARGETS Sandbox DESTINATION lib)
